# Multimodal-GHM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: download-scripts.yml
experiments/: eg_clas.sh  eg_clip.sh  eg_dns.sh  eg_nwp.sh  eg_sdns.sh  eg_snwp.sh  exp_cdns.sh  exp_clas.sh  exp_nwp.sh  exp_sdns.sh  exp_snwp.sh  ps_cdns.sh  ps_dns.sh  ps_nwp.sh  ps_sdns.sh  ps_snwp.sh  runclips.sh
figures/: Fig2-taskRisks.ipynb  Fig56-ZSC-m.ipynb  Fig7-imagenet.ipynb  Fig8-OODRisks.ipynb  Fig9-OODrisks2.ipynb  README.md  cdm-ood.py  cdm-risk.py  clip-ood.py  clip-risk.py  eval-cdm-ood.py  eval-cdm-risk.py  eval-clip-ood.py  eval-clip-risk.py  eval-vlm-ood.py  eval-vlm-risk.py  eval-zsc-numsamples.py  eval-zsc-ood.py  eval-zsc-risk.py  eval_paths.py  train-losses.py  vlm-ood.py  vlm-risk.py  zsc-numsamples.py  zsc-ood.py  zsc-pflip.py
figures/data/: cdm-ood-pt20.json  cdm-risk.json  clip-risk.json  ood-clip.json  vlm-ood.json  vlm-risk.json  zsc-numsamples.json  zsc-ood.json  zsc_vs_num_samples_res.json
scripts/: clean_checkpoints.py  download_ckpt.py  download_data.py  eg_prh_clip.sh  eg_prh_dns.sh  eg_prh_nwp.sh  eg_prhcls.sh  eg_prhsimclr.sh  eg_prhtext.sh  eg_simclr.sh  exp_prh_clip.sh  exp_prh_dns.sh  exp_prh_nwp.sh  reproduce_eval.sh  reproduce_figures.sh  reproduce_train.sh  uv_wrapper.sh
scripts/examples/: eg_clas.sh  (+5 more)
tests/: __init__.py  test_data_randomghm.py  test_double_samplers.py  test_download_scripts.py  test_ghm_tree.py  test_metrics.py  test_model_loading.py  test_single_samplers.py  test_transformer.py
(+55 files in other folders)
