[project]
name = "ghmclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.16.6",
    "numpy>=2.2.6",
    "pytest>=9.0.3",
    "s3fs>=2025.9.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
